# GPWatchDog

./: .gitmodules  CMakeLists.txt  README.md  clang-format.sh
cli/src/: main.cpp
client/include/: Client.hpp  gpwd_client.hpp
client/src/: gpwd_client.cpp
common/include/: gpwd_message.hpp
common/src/: gpwd_message.cpp
example/: my_app.cpp
server/config/: example_config.json
server/src/: gpwd_server.cpp  gpwd_server.hpp  main.cpp
